@@ -10,4 +10,7 @@ To do
 
     * Include simple scripts to queue emails for dial-up connections.
 
+    * In conjunction with "preconnect", a "postconnect" configuration option
+      would be a good idea (example: tear down a SSH tunnel).
+
 
